# multi-agent-textile-foundry

./: .env.example  .gitignore  ARCHITECTURE.md  PLANS.md  README.md  agent_engine.py  alembic.ini  app.py  docker-compose.yml  main.py  pyproject.toml  render.yaml  vercel.json
alembic/: env.py
alembic/versions/: 0843d820a5e7_create_traceable_textile_schema.py
data/: cost_rates.json  fabric_specs.json  source_registry.json
data/schemas/: cost_rates.schema.json  fabric_specs.schema.json
docs/: DATA_SOURCES.md  DEPLOYMENT.md  PHASE1_REPORT.md  PHASE2_REPORT.md  PHASE3_REPORT.md  PHASE4_REPORT.md  RESEARCH_SUMMARY.md
docs/DECISIONS/: 0001-initial-architecture.md
docs/research/: 2026-07-22-source-audit.md
scripts/: seed_database.py
src/textile_foundry/: __init__.py  cli.py  config.py  exceptions.py  graph.py  state.py
src/textile_foundry/api/: __init__.py  app.py  persistence.py  schemas.py
src/textile_foundry/db/: __init__.py  base.py  models.py  repository.py  seed.py  session.py
src/textile_foundry/models/: __init__.py  cost.py  process.py  provenance.py  requirements.py
src/textile_foundry/nodes/: __init__.py  cost_estimator.py  process_designer.py  requirement_analyzer.py
src/textile_foundry/repositories/: __init__.py  cost_repository.py  fabric_repository.py  json_loader.py
tests/: conftest.py  test_api.py  test_database.py  test_graph_and_cli.py  test_models_and_repositories.py  test_requirements_and_security.py  test_seed_and_migrations.py
web/: api-guide.html  app.js  guide.css  index.html  styles.css
(+9 files in other folders)
